--- a/templates/index.html
+++ b/templates/index.html
@@ -40,13 +40,14 @@
     <main>
       <div class="container">
         <div class="item">{{ ip }}</div>
+        <div class="item">{{ country }}</div>
         <div class="item">{{ province }}</div>
         <div class="item">{{ city }}</div>
         <div class="item">{{ isp }}</div>
       </div>
     </main>
     <footer>
-      <a href="../json/">返回 JSON</a> | 版权所有 &copy; 2022
+      版权所有 &copy; 2022
       <a href="https://gitee.com/songyustudio/">松鱼工作室</a>. 保留所有权利.
     </footer>
   </body>
