--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,7 @@
       </div>
     </main>
     <footer>
-      版权所有 &copy; 2022
-      <a href="https://gitee.com/songyustudio/">松鱼工作室</a>. 保留所有权利.
+      Designed by <a href="https://gitee.com/songyustudio/ip">松鱼工作室</a>
     </footer>
   </body>
 </html>
