--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,5 @@
 /* color palette
-    https://coolors.co/f8f9fa-e9ecef-dee2e6-ced4da-adb5bd-6c757d-495057-343a40-212529 */
-
+    https://material.io/design/color/the-color-system.html#tools-for-picking-colors
 /* font-family
     https://zenozeng.github.io/fonts.css/ */
 body {
@@ -12,70 +11,72 @@ body {
 }
 
 a {
+  color: blue;
   text-decoration: none;
 }
 
-/* https://www.w3schools.com/howto/howto_css_contenteditable_border.asp */
-[contenteditable] {
-  outline: 0px solid transparent;
+a:visited {
+  color: blue;
 }
 
-div.container {
-  display: flex;
-  flex-direction: column;
+main {
   height: 100vh;
-  /* 8vh guranteen a at least 1.5 line height
-    12vw guranteen enough space to show 255.255.255.255*/
-  font-size: min(8vh, 12vw);
+  background: linear-gradient(180deg, #9e9e9e, #ffffff);
 }
 
-div.item {
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+section {
+  box-sizing: border-box;
+  height: 20vh;
+  text-align: center;
   overflow-x: auto;
   white-space: nowrap;
+  border: 0;
+  padding-top: 6vh;
+  padding-bottom: 4vh;
 }
 
-div.item:nth-of-type(1) {
-  background-color: #adb5bd;
-  color: black;
+h1 {
+  /* 7vh guranteen enough space to show 255.255.255.255 on iPhone SE*/
+  font-size: 7vh;
+  margin-bottom: 1vh;
+  opacity: 0.87;
 }
 
-div.item:nth-of-type(1):hover {
-  background-color: white;
-  border: 1px solid #adb5bd;
-}
-
-div.item:nth-of-type(1):focus {
-  background-color: white;
-  border: 2px solid #adb5bd;
-}
-
-div.item:nth-of-type(2) {
-  background-color: #ced4da;
-  color: black;
-}
-div.item:nth-of-type(3) {
-  background-color: #dee2e6;
-  color: black;
-}
-
-div.item:nth-of-type(4) {
-  background-color: #e9ecef;
-  color: black;
-}
-
-div.item:nth-of-type(5) {
-  background-color: #f8f9fa;
-  color: black;
+p {
+  font-size: 2vh;
+  opacity: 0.6;
 }
 
 footer {
+  font-size: 12px;
+  margin-top: 16px;
+  margin-bottom: 16px;
   text-align: center;
-  font-size: 0.75rem;
-  color: #808080;
-  line-height: 1.5;
-  padding: 4vh 0;
+  opacity: 0.87;
+  background-color: #ffffff;
 }
+
+/* card layout */
+/* section:nth-of-type(1) {
+  background-color: #9e9e9e;
+  color: black;
+}
+
+section:nth-of-type(2) {
+  background-color: #bdbdbd;
+  color: black;
+}
+section:nth-of-type(3) {
+  background-color: #e0e0e0;
+  color: black;
+}
+
+section:nth-of-type(4) {
+  background-color: #eeeeee;
+  color: black;
+}
+
+section:nth-of-type(5) {
+  background-color: #f5f5f5;
+  color: black;
+} */
