--- a/templates/index.html
+++ b/templates/index.html
@@ -75,8 +75,18 @@
       </section>
     </main>
     <footer>
-      MIT License (c) 2022
-      <a href="https://gitee.com/songyustudio/ip">松鱼工作室</a>
+      <section>
+        <h1>
+          <img
+            src="{% static 'favicon_io/android-chrome-192x192.png' %}"
+            alt="logo"
+          />
+        </h1>
+        <p>
+          MIT License (c) 2022
+          <a href="https://gitee.com/songyustudio/ip">松鱼工作室</a>
+        </p>
+      </section>
     </footer>
   </body>
 </html>
