--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,3 @@
-/* color palette
-    https://material.io/design/color/the-color-system.html#tools-for-picking-colors
 /* font-family
     https://zenozeng.github.io/fonts.css/ */
 body {
@@ -21,18 +19,55 @@ a:visited {
 
 main {
   height: 100vh;
-  background: linear-gradient(180deg, #9e9e9e, #ffffff);
+  /* Rainbow Colors 300
+  https://material.io/design/color/the-color-system.html#tools-for-picking-colors
+
+  There are 9 <linear-color-stop>  that creates 8 color regions (region 1 to
+  region 8).We know the last two <linear-color-stop> are the same as the first
+  two, thus region 8should be identical to region 1.
+
+  We set the <background-size> to 800%, thus every time there should be exactly
+  1 colour region showing on the screen. We start from the last colour region
+  and end with the first one so that we can create a smooth animation.
+
+  It is to be noted that the <background_position> starts at 100% rather than
+  87.5% (7/8) because: "A value of 100% means that the bottom edge of the
+  background image is aligned with the bottom edge of the container."
+  */
+  background: linear-gradient(
+    0deg,
+    #e57373,
+    #ffb74d,
+    #fff176,
+    #81c784,
+    #64b5f6,
+    #7986cb,
+    #ba68c8,
+    #e57373,
+    #ffb74d
+  );
+  background-size: 100% 800%;
+  animation: rainbow 30s linear infinite;
+}
+
+@keyframes rainbow {
+  0% {
+    background-position: 0% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
 }
 
 section {
   box-sizing: border-box;
-  height: 20vh;
   text-align: center;
   overflow-x: auto;
   white-space: nowrap;
   border: 0;
-  padding-top: 6vh;
-  padding-bottom: 4vh;
+  height: 20vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 
 h1 {
@@ -40,6 +75,7 @@ h1 {
   font-size: 7vh;
   margin-bottom: 1vh;
   opacity: 0.87;
+  height: 7vh;
 }
 
 p {
@@ -47,36 +83,18 @@ p {
   opacity: 0.6;
 }
 
-footer {
-  background-color: #ffffff;
-}
-
 img {
   height: 7vh;
   width: 7vh;
 }
 
-/* card layout */
-/* section:nth-of-type(1) {
-  background-color: #9e9e9e;
-  color: black;
+/* the section before copyright section */
+section:nth-last-of-type(2) {
+  height: 17vh;
 }
 
-section:nth-of-type(2) {
-  background-color: #bdbdbd;
-  color: black;
+/* copyright section */
+section:nth-last-of-type(1) {
+  padding: 0;
+  height: 3vh;
 }
-section:nth-of-type(3) {
-  background-color: #e0e0e0;
-  color: black;
-}
-
-section:nth-of-type(4) {
-  background-color: #eeeeee;
-  color: black;
-}
-
-section:nth-of-type(5) {
-  background-color: #f5f5f5;
-  color: black;
-} */
