--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,7 @@ a:visited {
   color: blue;
 }
 
-main {
+body {
   height: 100vh;
   /* Rainbow Colors 300
   https://material.io/design/color/the-color-system.html#tools-for-picking-colors
@@ -59,6 +59,13 @@ main {
   }
 }
 
+main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 section {
   box-sizing: border-box;
   text-align: center;
@@ -67,8 +74,8 @@ section {
   white-space: nowrap;
   border: 0;
   height: 20vh;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
+  padding-top: 6vh;
+  padding-bottom: 4vh;
 }
 
 h1 {
@@ -83,18 +90,10 @@ p {
   opacity: 0.6;
 }
 
-img {
-  height: 7vh;
-  width: 7vh;
-}
-
-/* the section before copyright section */
-section:nth-last-of-type(2) {
-  height: 17vh;
-}
-
-/* copyright section */
-section:nth-last-of-type(1) {
-  padding: 0;
-  height: 3vh;
+footer {
+  text-align: center;
+  position: fixed;
+  bottom: 8px;
+  font-size: 14px;
+  width: 100%;
 }
