remove dot between province and city

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
         {% elif province == city %}
         <h1>{{ city }}</h1>
         {% else %}
-        <h1>{{ province }}・{{ city }}</h1>
+        <h1>{{ province }} {{ city }}</h1>
         {% endif %} {% if country %}
         <p>{{ country }}</p>
         {% endif %}
