--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,18 @@
   </head>
 
   <body>
+    <header>
+      <p>
+        MIT License © 2022
+        <a href="https://gitee.com/songyustudio/ip">松鱼工作室</a>
+      </p>
+      {% if database_name %}
+      <p>
+        IP 归属地数据库：
+        <a href="{{ database_href }}">{{ database_name }}</a>
+      </p>
+      {% endif %}
+    </header>
     <main>
       <section>
         <h1>{{ ip }}</h1>
@@ -82,9 +94,5 @@
         {% endif %}
       </section>
     </main>
-    <footer>
-      MIT License © 2022
-      <a href="https://gitee.com/songyustudio/ip">松鱼工作室</a>
-    </footer>
   </body>
 </html>
