change site name

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
     />
     <meta
       name="description"
-      content="我的IP查询, 可查询我的IP地址及归属地, 及访问本站所使用的设备、操作系统及浏览器版本。"
+      content="考拉IP归属地，可查询用户IP地址及归属地, 及设备型号、操作系统及浏览器版本。"
     />
-    <title>我的IP查询</title>
+    <title>考拉IP归属地</title>
     <!-- import favicon -->
     <link
       rel="apple-touch-icon"
@@ -43,7 +43,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
   </head>
   <body>
-    <header>我的 IP 查询</header>
+    <header>考拉 IP 归属地</header>
     <main>
       <section>
         <h1>IP 归属地</h1>
