--- a/templates/index.html
+++ b/templates/index.html
@@ -94,8 +94,11 @@
       </section>
     </main>
     <footer>
-      MIT License Copyright © 2022
-      <a href="https://gitee.com/songyustudio/ip">松鱼工作室</a>
+      <p>
+        <a href="https://gitee.com/songyustudio/ip">码云</a> |
+        <a href="https://github.com/jackjyq/ip">Github</a>
+      </p>
+      <p>MIT License © 2022 松鱼工作室</p>
     </footer>
   </body>
 </html>
