--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,10 @@
         <a href="https://gitee.com/songyustudio/ip">码云</a> |
         <a href="https://github.com/jackjyq/ip">Github</a>
       </p>
-      <p>MIT License © 2022 松鱼工作室</p>
+      <p>
+        MIT License © 2022
+        <a href="https://www.jackjyq.com">松鱼工作室</a>
+      </p>
     </footer>
   </body>
 </html>
