--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,8 @@
     <!-- import css -->
     <link rel="stylesheet" type="text/css" href="{% static 'reset.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}" />
+    <!-- import js -->
+    <script src="{% static 'scripts.js' %}" defer></script>
   </head>
   <body>
     <header>考拉 IP 归属地</header>
@@ -75,7 +77,7 @@
         </p>
       </section>
       <section>
-        <h1>客户端</h1>
+        <h1>访问设备</h1>
         <ul>
           <li>
             <span>浏览器</span>
@@ -91,6 +93,19 @@
           </li>
         </ul>
         <p>用户代理: {{ user_agent }}</p>
+      </section>
+      <section>
+        <h1>屏幕分辨率</h1>
+        <ul>
+          <li>
+            <span>宽</span>
+            <span id="width">0</span>
+          </li>
+          <li>
+            <span>高</span>
+            <span id="height">0</span>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
