--- a/templates/index.html
+++ b/templates/index.html
@@ -106,6 +106,7 @@
             <span id="height">0</span>
           </li>
         </ul>
+        <p id="devicePixelRatio">设备像素比: 1</p>
       </section>
     </main>
     <footer>
