--- a/static/styles.css
+++ b/static/styles.css
@@ -30,7 +30,7 @@ header {
 
 main {
   /* 100vh - header - footer */
-  min-height: calc(100vh - 120px - 80px);
+  min-height: calc(100vh - 100px - 80px);
 }
 
 section {
@@ -83,4 +83,15 @@ footer p {
 a {
   color: #3b77e1;
   text-decoration: none;
+}
+
+/* mobile layout */
+@media only screen and (max-width: 768px) {
+  header {
+    display: none;
+  }
+  main {
+    /* 100vh - footer */
+    min-height: calc(100vh - 80px);
+  }
 }
