增加文本 API，增加捐赠栏目

--- a/templates/index.html
+++ b/templates/index.html
@@ -126,8 +126,28 @@
         </ul>
         <p>用户代理: {{ user_agent }}</p>
       </section>
+      <section>
+        <h1>捐赠项目</h1>
+        <ul>
+          <li>
+            <a href="{% static 'donate/微信-667x667.png' %}"
+              ><span>微信</span></a
+            >
+          </li>
+          <li>
+            <a href="{% static 'donate/支付宝-667x667.png' %}"
+              ><span>支付宝</span></a
+            >
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
+      <p>
+        <a href="https://gitee.com/songyustudio/ip/blob/master/README.md"
+          >API 文档</a
+        >
+      </p>
       <p>
         <a href="https://gitee.com/songyustudio/ip">码云</a> |
         <a href="https://github.com/jackjyq/ip">Github</a>
