fix resolution description

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
           </li>
         </ul>
       </section>
-      <p>注意: 屏幕分辨率可通过系统设置更改</p>
+      <p>注意: 此处分辨率为逻辑分辨率，而非物理分辨率</p>
       <section>
         <h1>捐赠项目</h1>
         <ul>
