remove unused rows

--- a/templates/index.html
+++ b/templates/index.html
@@ -149,25 +149,18 @@
         <ul>
           <li>
             <span>逻辑分辨率</span>
-            <span id="resolution">未知</span>
+            <span id="logicResolution">未知</span>
           </li>
           <li>
-            <span>长宽比</span>
-            <span id="aspectRatio">未知</span>
-          </li>
-          <li>
-            <span>像素比</span>
-            <span id="devicePixelRatio">1</span>
-          </li>
-          <li>
-            <span>触屏</span>
-            <span id="touchscreen">否</span>
+            <span>物理分辨率</span>
+            <span id="resolution">1</span>
           </li>
           <li>
             <span>色深</span>
             <span id="colorDepth">未知</span>
           </li>
         </ul>
+        <p>注：物理分辨率 = 逻辑分辨率 x 缩放系数，不一定准确</p>
       </section>
       <section>
         <h1>捐赠项目</h1>
