--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
             <span id="fps">0</span>
           </li>
         </ul>
-        <p>刷新率为计算所得，数值可能受系统负载影响</p>
+        <p>刷新率为计算所得，受系统负载影响，会有所波动。</p>
       </section>
       <section>
         <h1>屏幕</h1>
@@ -173,7 +173,7 @@
             <span id="colorDepth">未知</span>
           </li>
         </ul>
-        <p>物理分辨率 = 逻辑分辨率 x 缩放系数；可能受屏幕缩放比影响。</p>
+        <p>物理分辨率 = 逻辑分辨率 x 缩放系数；受屏幕缩放比影响，有可能不准确。</p>
       </section>
       <section>
         <h1>捐赠项目</h1>
